<resources>
    <string name="app_name">WorkoutTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Workout Tracker</string>
    <string name="profile">Profile</string>
    <string name="show_my_sets">Show my sets</string>
    <string name="yourProfile">Profile</string>
    <string name="sets">Sets</string>
    <string name="addbutton">AddButton</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="new_set_title">New Set</string>
    <string name="button_ok">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="height">Height:</string>
    <string name="weightp">Weight:</string>
    <string name="age">Age:</string>
    <string name="save">SAVE</string>
    <string name="namep">Name:</string>
</resources>